# gamepad-monitor-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  build_log.txt  buildspec.json  deploy_macos.sh  readme.md
.github/actions/build-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: .Brewfile
.github/workflows/: build-project.yaml
src/: gamepad-manager.cpp  gamepad-manager.hpp  gamepad-settings-dialog.cpp  gamepad-settings-dialog.hpp  plugin-main.cpp
